proj/src/parser/ParserLDXpp.jj
PARSER_BEGIN(Parser)

package proj.src.parser;

import proj.src.ast.*;
import proj.src.types.*;
import proj.src.env.*;
import proj.src.defeq.*;
import proj.src.commands.*;
import java.util.*;

public class Parser {
}

PARSER_END(Parser)

SKIP : { " " | "\t" | "\r" | "\n" }

SKIP :
{
    < "//" (~["\n", "\r"])* ("\r\n" | "\n" | "\r")? >
}

TOKEN :
{
  < LET : "let" >
  |
  < Bool : ("true"|"false") > | < LinBool : ("truel"|"falsel") >
  |
  < PLUS : "+" > | < MINUS : "-" > | < STAR : "*"> | < DIV : "/">
  |
  < EQ : "==" > | < GT : ">" > | < LT : "<" > | < GTEQ : ">=" > | < LTEQ : "<=" > | < DIF : "!=" >
  |
  < AND : "&&" > | < OR : "||" > | < NOT : "~" >
  |
  < LPAR : "(" > | < RPAR : ")" > | < LRPAR : "()" >
  |
  < LCUR : "{" > | < RCUR : "}" >
  |
  < LBRA : "[" > | < RBRA : "]" >
  |
  < REFL: "refl" > | < LETEQ: "leteq" > | < NEVER: "never" >
  |
  < EQUAL : "=" > | < VERT : "|" >
  |
  < DOT : "." > | < COLON : ":" >
  |
  < SEMIC : ";" > | < TERM : ";;" > | < COMMA : "," > | < QUESTION : "?"> 
  |
  < IF : "if" > | < ELSE : "else" >
  |
  < PRINT : "print" > | < PRINTLN : "println" >
  |
  < FN : "fn" > | < LFN : "lfn" > | < LETREC : "letrec" >
  |
  < ARROW : "=>" > | < DLOLLIPOP : "=o>" > | < SLIMARROW : "->" > | < LOLLIPOP : "-o>" >
  |
  < FST : "fst" > | < SND : "snd" >
  |
  < MATCH : "match" >
  |
  < TYPE : "type" >
  |
  < TINT : "int" > | < TLINT : "linint" >
  |
  < TBOOL : "bool" > | < TLBOOL : "linbool" >
  |
  < TSTRING  : "string" >  
  |
  < TUNION  : "union" > | < TLUNION : "linunion" >
  |
  < LABEL : "#" ["a"-"z", "A"-"Z"] (["a"-"z","A"-"Z","0"-"9"])* > | < LLABEL : "$" ["a"-"z", "A"-"Z"] (["a"-"z","A"-"Z","0"-"9"])* >
  |
  < Str: "\"" ( (~["\"","\\"]) | ("\\" ( ["n","t","b","r","f","\\","\""] ) ) )* "\"" >
  |
  < Id: ["a"-"z","A"-"Z", "_"] ( ["_", "a"-"z","A"-"Z","0"-"9"] )* >
  |
  < LinNum: (["0"-"9"])+ "l" > | < Num: (["0"-"9"])+ >
}

Command Start():
{ Command c = null;
  ASTNode t;
  Token n;
}
{
  (
    <COLON> n = <Id>
    {
      if (n.image.equals("v")) { c = EvalCmd(); }
      else if (n.image.equals("t")) { c = TypeCmd(); }
      else if (n.image.equals("n")) { c = NormCmd(); }
      else if (n.image.equals("e")) { c = EqCmd(); }
      else if (n.image.equals("te")) { c = TEqCmd(); }
      else throw new ParseException("invalid command");
    }
  |
    t = Program() {if (t != null) c = new RunCommand(t); }
  )
  { return c; }
}

EvalCommand EvalCmd():
{ ASTNode t; }{ t = Program() { return (t == null) ? null : new EvalCommand(t); } }

TypeCommand TypeCmd():
{ ASTNode t; }{ t = Program() { return (t == null) ? null : new TypeCommand(t); } }

NormCommand NormCmd():
{ ASTNode t; }{ t = Program() { return (t == null) ? null : new NormCommand(t); } }

EqCommand EqCmd():
{ ASTNode t1, t2; }{ t1 = Term() <QUESTION> t2 = Term() <TERM> { return new EqCommand(t1, t2); } }

TEqCommand TEqCmd():
{ ASTType t1, t2; }{ t1 = Type() <QUESTION> t2 = Type() <TERM> { return new TEqCommand(t1, t2); } }



ASTNode Program():
{ ASTNode t; }
{
    <EOF> {return null;}
  | t = Let() <TERM> { return t; }
}

ASTNode Let() :
{ Token n;
  ASTNode t, e1, e2;
  ASTType t1;
}
{  
    (
      t = Seq()
    |
      ( <LET> t = LetStatement() )
    |
      ( <LETEQ>  n=<Id> <EQUAL> e1 = BA() <SEMIC> e2 = Let() { t = new ASTLeteq(n.image, e1, e2); } )
    |
      ( <LETREC> n=<Id> <COLON> t1 = Type() <EQUAL> t = BA() <SEMIC> e2 = Let() { t = new ASTLetrec(n.image, t1, t, e2); } )
    |
      {  HashMap<String,ASTType> lbl = new HashMap<String,ASTType>(); }
      ( (LOOKAHEAD(2) <TYPE>  n=<Id>  <EQUAL> t1 = Type()  <SEMIC>
        { if (lbl.containsKey(n.image)) { throw new ParseException("duplicate id"); } else { lbl.put(n.image, t1); } } )+
          e2 = Let() { t = new ASTTypeDef(lbl, e2); } )
    )
   { return t; }
}

ASTNode LetStatement() :
{ Token n, n2;
  ASTType t1 = null;
  ASTNode t, e1, e2;
}
{
  (
    ( n=<Id> (<COLON> t1 = Type())? <EQUAL> e1 = BA() <SEMIC> e2 = Let() { t = new ASTLet(n.image, e1, t1, e2); } )
      |
    ( <LBRA> n=<Id> <COMMA> n2=<Id> <RBRA> <EQUAL> e1 = BA() <SEMIC> e2 = Let()
          { if (n.image.equals(n2.image)) throw new ParseException("duplicate id");
            t = new ASTSplit(e1, n.image, n2.image, e2); } )
  )
  { return t; }
}

ASTNode Seq() :
{Token op;
  ASTNode t1, t2;}
{
  t1 = BA() (op=<SEMIC> t2 = BA() { t1 = new ASTSeq(t1, t2); })*
  { return t1; }  
}

ASTNode BA() :
{Token op;
  ASTNode t1, t2;}
{
  t1 = BM() (op=<OR> t2 = BM() { t1 = new ASTOp(t1, t2, "||"); })*
  { return t1; } 
}

ASTNode BM() :
{Token op;
  ASTNode t1, t2;}
{
  t1 = Rel() (op=<AND> t2 = Rel() { t1 = new ASTOp(t1, t2, "&&"); })*
  { return t1; } 
}


ASTNode Rel() :
{Token op;
  ASTNode t1, t2;}
{
  t1 = Exp() ( (op=<EQ> | op=<GT> | op=<LT> | op=<GTEQ> | op=<LTEQ> | op=<DIF>) t2 = Exp() 
  { t1 = new ASTOp(t1, t2, op.image); })?
  { return t1; } 
}


ASTNode Exp() :
{ Token op;
  ASTNode t1, t2; }
{
  t1=Term() ( (op=<PLUS> | op=<MINUS>) t2=Term() 
  { t1 = new ASTOp(t1,t2,op.image); })*
  { return t1; } 
}

ASTNode Term() :
{ Token op;
  ASTNode t1, t2; }
{
  t1 = App() ( (op=<STAR> | op=<DIV>) t2 = App()
  { t1 = new ASTOp(t1, t2, op.image); })*
  { return t1; }
}

ASTNode App() :
{ ASTNode t1, t2; }
{
  t1 = Fact()
  (
    <LRPAR> { t1 = new ASTApp(t1, new ASTUnit()); }
    |
    <LPAR> t2 = Let() <RPAR> { t1 = new ASTApp(t1, t2); }
  )*
  { return t1; }
}

ASTNode Fact() :
{ Token n = null; 
  ASTNode t = null, t2 = null, t3 = null;;
  ASTType type;
}
{
   (
      n=<Num> { t = new ASTInt(Integer.parseInt(n.image), false); }
    | n=<LinNum> { t = new ASTInt(Integer.parseInt(n.image.substring(0, n.image.length()-1)), true); }
    | n=<Bool> { t = new ASTBool(Boolean.parseBoolean(n.image), false); }
    | n=<LinBool> { t = new ASTBool(Boolean.parseBoolean(n.image.substring(0, n.image.length()-1)), true); }
    | n = <Id> { t = new ASTId(n.image); }
    | n=<Str> { t = new ASTString(n.image.substring(1, n.image.length()-1)); }
    | <LRPAR> { t = new ASTUnit(); }
    | <MINUS> t=Fact() { t = new ASTOp(new ASTInt(0, false), t, "-u"); }
    | <NOT> t=Fact() { t = new ASTOp(new ASTBool(true, false), t, "~"); }
    | <IF> t=BA() <LCUR> t2=Let() <RCUR> <ELSE> <LCUR> t3=Let() <RCUR> { t = new ASTIf(t, t2, t3); }
    | t = Funct()
    | (n=<PRINT>|n=<PRINTLN>) t=Fact() { t = new ASTPrint(t, n.image.equals("println")); }
    | (n=<FST>|n=<SND>) <LPAR> t = Let() <RPAR> { t = new ASTProj(t, n.image.equals("fst")); }
    | <MATCH> t2 = Let() t = Match(t2)
    |  n = <LABEL> <LPAR> t = Let() <RPAR> { t = new ASTUnion(n.image, t, false); }
    |  n = <LLABEL> <LPAR> t = Let() <RPAR> { t = new ASTUnion(n.image, t, true); }
    | <LPAR> t = TermList(false) <RPAR>
    | <LBRA> t = Let() <COMMA> t2 = TermList(true) <RBRA> { t = new ASTPair(t, t2, true); }
    | <REFL> (LOOKAHEAD(2) <LPAR> t = Fact() <EQUAL> t2 = Fact() <RPAR>)? { t = new ASTRefl(t, t2); }
    )
   { return t; }
}

ASTNode Funct() :
{ Token n;
  ASTNode t, t2;
  ASTFunc tf, tc, tn;
  ASTType type;
}
{
  (
    <FN> n=<Id> <COLON> type = Type() { tf = new ASTFunc(n.image, null, type, false); tc = tf; }
            (<COMMA> n=<Id> <COLON> type = Type() { tn = new ASTFunc(n.image, null, type, false); tc.setBody(tn); tc = tn; })*
            <ARROW> <LCUR> t2 = Let() <RCUR> { tc.setBody(t2); t = tf; }
  |
    <LFN> n=<Id> <COLON> type = Type() { tf = new ASTFunc(n.image, null, type, true); tc = tf; }
            (<COMMA> n=<Id> <COLON> type = Type() { tn = new ASTFunc(n.image, null, type, true); tc.setBody(tn); tc = tn; })*
            <DLOLLIPOP> <LCUR> t2 = Let() <RCUR> { tc.setBody(t2); t = tf; }
  )
  { return t; }
}

ASTNode TermList(boolean lin) :
{ ASTNode t, t2; }
{
  t = Let() (<COMMA> t2 = TermList(lin) { t = new ASTPair(t, t2, lin); })?
  { return t; }
}

ASTNode Match(ASTNode p) :
{
  Token l, n, n2;
  ASTMatch t = new ASTMatch(p);
  ASTNode e1, e2;
  Set<String> labels = new HashSet<String>();
}
{
  <LCUR>
  (
    (l = <LABEL> | l = <LLABEL>) <LPAR> n = <Id> <RPAR> <SLIMARROW> e1 = MatchExpr() { labels.add(l.image); t.addCase(l.image, n.image, e1); }
    (
      <VERT> (l = <LABEL> | l = <LLABEL>) <LPAR> n = <Id> <RPAR> <SLIMARROW> e1 = MatchExpr()
      { if (labels.contains(l.image)) throw new ParseException("duplicate label");
        else t.addCase(l.image, n.image, e1); }
    )*
  )
  <RCUR>
  { return t; }
}

ASTNode MatchExpr() :
{ ASTNode t; }
{
  (
    <NEVER> { t =  new ASTNever(); }
  |
    t = Let()
  ) { return t; }
}

ASTType Type() : 
{
  ASTType t1, t2;
  Token n = null;
}
{   (
      LOOKAHEAD(<LPAR> IdAnnotation() Type() <RPAR>)
      <LPAR> n = IdAnnotation() t1 = Type() <RPAR>
    |
      t1 = TypeF()
    )

      (
        <SLIMARROW> t2 = Type() { t1 = new ASTTArrow(t1, t2, n != null ? n.image : null, null, false); }
      |
        <LOLLIPOP> t2 = Type() { t1 = new ASTTArrow(t1, t2, n != null ? n.image : null, null, true); }
      )?
    { return t1; }
}

ASTType TypeF() :
{
  ASTType t, t2;
  ASTNode te, te2;
  Token n;
  Map<String, ASTType> ll;
}
{
    (
          <TINT> { t = new ASTTInt(false); }
        | <TLINT> { t = new ASTTInt(true); }
        | n=<Id> { t = new ASTTId(n.image); }
        | <TBOOL> { t = new ASTTBool(false); }
        | <TLBOOL> { t = new ASTTBool(true); }
        | <LRPAR> { t = new ASTTUnit(); }
        | <TSTRING> { t = new ASTTString(); }
        | <TUNION> <LCUR> ll = LabelList() <RCUR> { t = new ASTTUnion(ll, false); }
        | <TLUNION> <LCUR> ll = LabelList() <RCUR> { t = new ASTTUnion(ll, true); }
        | <LPAR> t = TypeInsidePar() <RPAR>
        | <LBRA> t = TypeInsideBra() <RBRA>
    )
    { return t; }
}

ASTType TypeInsidePar():
{ ASTType t, t2;
  ASTNode te, te2;
  Token n; }
{
  (
    LOOKAHEAD(Let() <EQUAL>)
    te = Let() <EQUAL> te2 = Let() <COLON> t = Type() { t = new ASTTEq(te, te2, t); }
    |
    n = IdAnnotation() t = Type() <COMMA> t2 = TypeList(false) { t = new ASTTPair(t, t2, n == null ? null : n.image, null, false); }
  )
  { return t; }
}

ASTType TypeInsideBra():
{ ASTType t, t2;
  Token n; }
{
  n = IdAnnotation() t = Type() <COMMA> t2 = TypeList(true) { t = new ASTTPair(t, t2, n == null ? null : n.image, null, true); }
  { return t; }
}

ASTType TypeList(boolean lin):
{ ASTType t, t2;
  Token n; }
{
  n = IdAnnotation() t = Type() (<COMMA> t2 = TypeList(lin) { t = new ASTTPair(t, t2, n == null ? null : n.image, null, lin); })?
  { return t; }
}

Token IdAnnotation() :
{ Token n = null; }
{ (LOOKAHEAD(<Id> <COLON>) n=<Id> <COLON>)? { return n; } }

Map<String, ASTType> LabelList() :
{
  ASTType t;
  HashMap<String, ASTType> ll;
  Token n;
}
{   { ll = new HashMap<String, ASTType>() ; }
    ( (n=<LABEL>|n=<LLABEL>)  <COLON> t = Type() { ll.put(n.image,t); }
            (<COMMA> (n=<LABEL>|n=<LLABEL>)  <COLON> t = Type()
              { if (ll.putIfAbsent(n.image, t) != null) throw new ParseException("duplicate label"); } )*
    )?
    { return ll; }
}
