proj/src/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package proj.src.parser;

import proj.src.ast.*;
import proj.src.types.*;
import proj.src.env.*;
import proj.src.defeq.*;
import proj.src.commands.*;
import java.util.*;

public class Parser implements ParserConstants {

  final public Command Start() throws ParseException {
  Command c = null;
  ASTNode t;
  Token n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      jj_consume_token(COLON);
      n = jj_consume_token(Id);
      if (n.image.equals("v")) { c = EvalCmd(); }
      else if (n.image.equals("t")) { c = TypeCmd(); }
      else if (n.image.equals("n")) { c = NormCmd(); }
      else if (n.image.equals("e")) { c = EqCmd(); }
      else if (n.image.equals("te")) { c = TEqCmd(); }
      else {if (true) throw new ParseException("invalid command");}
      break;
    case 0:
    case LET:
    case Bool:
    case LinBool:
    case MINUS:
    case NOT:
    case LPAR:
    case LRPAR:
    case LBRA:
    case REFL:
    case LETEQ:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case LETREC:
    case FST:
    case SND:
    case MATCH:
    case TYPE:
    case LABEL:
    case LLABEL:
    case Str:
    case Id:
    case LinNum:
    case Num:
      t = Program();
                   if (t != null) c = new RunCommand(t);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public EvalCommand EvalCmd() throws ParseException {
  ASTNode t;
    t = Program();
                                {if (true) return (t == null) ? null : new EvalCommand(t);}
    throw new Error("Missing return statement in function");
  }

  final public TypeCommand TypeCmd() throws ParseException {
  ASTNode t;
    t = Program();
                                {if (true) return (t == null) ? null : new TypeCommand(t);}
    throw new Error("Missing return statement in function");
  }

  final public NormCommand NormCmd() throws ParseException {
  ASTNode t;
    t = Program();
                                {if (true) return (t == null) ? null : new NormCommand(t);}
    throw new Error("Missing return statement in function");
  }

  final public EqCommand EqCmd() throws ParseException {
  ASTNode t1, t2;
    t1 = Term();
    jj_consume_token(QUESTION);
    t2 = Term();
    jj_consume_token(TERM);
                                                                 {if (true) return new EqCommand(t1, t2);}
    throw new Error("Missing return statement in function");
  }

  final public TEqCommand TEqCmd() throws ParseException {
  ASTType t1, t2;
    t1 = Type();
    jj_consume_token(QUESTION);
    t2 = Type();
    jj_consume_token(TERM);
                                                                 {if (true) return new TEqCommand(t1, t2);}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Program() throws ParseException {
  ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
           {if (true) return null;}
      break;
    case LET:
    case Bool:
    case LinBool:
    case MINUS:
    case NOT:
    case LPAR:
    case LRPAR:
    case LBRA:
    case REFL:
    case LETEQ:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case LETREC:
    case FST:
    case SND:
    case MATCH:
    case TYPE:
    case LABEL:
    case LLABEL:
    case Str:
    case Id:
    case LinNum:
    case Num:
      t = Let();
      jj_consume_token(TERM);
                       {if (true) return t;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Let() throws ParseException {
  Token n;
  ASTNode t, e1, e2;
  ASTType t1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Bool:
    case LinBool:
    case MINUS:
    case NOT:
    case LPAR:
    case LRPAR:
    case LBRA:
    case REFL:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case FST:
    case SND:
    case MATCH:
    case LABEL:
    case LLABEL:
    case Str:
    case Id:
    case LinNum:
    case Num:
      t = Seq();
      break;
    case LET:
      jj_consume_token(LET);
      t = LetStatement();
      break;
    case LETEQ:
      jj_consume_token(LETEQ);
      n = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                               t = new ASTLeteq(n.image, e1, e2);
      break;
    case LETREC:
      jj_consume_token(LETREC);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      t1 = Type();
      jj_consume_token(EQUAL);
      t = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                                                  t = new ASTLetrec(n.image, t1, t, e2);
      break;
    case TYPE:
         HashMap<String,ASTType> lbl = new HashMap<String,ASTType>();
      label_1:
      while (true) {
        jj_consume_token(TYPE);
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        t1 = Type();
        jj_consume_token(SEMIC);
          if (lbl.containsKey(n.image)) { {if (true) throw new ParseException("duplicate id");} } else { lbl.put(n.image, t1); }
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
      }
      e2 = Let();
                       t = new ASTTypeDef(lbl, e2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode LetStatement() throws ParseException {
  Token n, n2;
  ASTType t1 = null;
  ASTNode t, e1, e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      n = jj_consume_token(Id);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        t1 = Type();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                                           t = new ASTLet(n.image, e1, t1, e2);
      break;
    case LBRA:
      jj_consume_token(LBRA);
      n = jj_consume_token(Id);
      jj_consume_token(COMMA);
      n2 = jj_consume_token(Id);
      jj_consume_token(RBRA);
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
            if (n.image.equals(n2.image)) {if (true) throw new ParseException("duplicate id");}
            t = new ASTSplit(e1, n.image, n2.image, e2);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Seq() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BA();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      op = jj_consume_token(SEMIC);
      t2 = BA();
                                    t1 = new ASTSeq(t1, t2);
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode BA() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BM();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(OR);
      t2 = BM();
                                 t1 = new ASTOp(t1, t2, "||");
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode BM() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Rel();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      op = jj_consume_token(AND);
      t2 = Rel();
                                    t1 = new ASTOp(t1, t2, "&&");
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Rel() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        op = jj_consume_token(EQ);
        break;
      case GT:
        op = jj_consume_token(GT);
        break;
      case LT:
        op = jj_consume_token(LT);
        break;
      case GTEQ:
        op = jj_consume_token(GTEQ);
        break;
      case LTEQ:
        op = jj_consume_token(LTEQ);
        break;
      case DIF:
        op = jj_consume_token(DIF);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Exp();
    t1 = new ASTOp(t1, t2, op.image);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Exp() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        op = jj_consume_token(PLUS);
        break;
      case MINUS:
        op = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
    t1 = new ASTOp(t1,t2,op.image);
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Term() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = App();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case DIV:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        op = jj_consume_token(STAR);
        break;
      case DIV:
        op = jj_consume_token(DIV);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = App();
    t1 = new ASTOp(t1, t2, op.image);
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode App() throws ParseException {
  ASTNode t1, t2;
    t1 = Fact();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case LRPAR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LRPAR:
        jj_consume_token(LRPAR);
              t1 = new ASTApp(t1, new ASTUnit());
        break;
      case LPAR:
        jj_consume_token(LPAR);
        t2 = Let();
        jj_consume_token(RPAR);
                               t1 = new ASTApp(t1, t2);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Fact() throws ParseException {
  Token n = null;
  ASTNode t = null, t2 = null, t3 = null;;
  ASTType type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
                t = new ASTInt(Integer.parseInt(n.image), false);
      break;
    case LinNum:
      n = jj_consume_token(LinNum);
                   t = new ASTInt(Integer.parseInt(n.image.substring(0, n.image.length()-1)), true);
      break;
    case Bool:
      n = jj_consume_token(Bool);
                 t = new ASTBool(Boolean.parseBoolean(n.image), false);
      break;
    case LinBool:
      n = jj_consume_token(LinBool);
                    t = new ASTBool(Boolean.parseBoolean(n.image.substring(0, n.image.length()-1)), true);
      break;
    case Id:
      n = jj_consume_token(Id);
                 t = new ASTId(n.image);
      break;
    case Str:
      n = jj_consume_token(Str);
                t = new ASTString(n.image.substring(1, n.image.length()-1));
      break;
    case LRPAR:
      jj_consume_token(LRPAR);
                t = new ASTUnit();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      t = Fact();
                         t = new ASTOp(new ASTInt(0, false), t, "-u");
      break;
    case NOT:
      jj_consume_token(NOT);
      t = Fact();
                       t = new ASTOp(new ASTBool(true, false), t, "~");
      break;
    case IF:
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LCUR);
      t2 = Let();
      jj_consume_token(RCUR);
      jj_consume_token(ELSE);
      jj_consume_token(LCUR);
      t3 = Let();
      jj_consume_token(RCUR);
                                                                         t = new ASTIf(t, t2, t3);
      break;
    case FN:
    case LFN:
      t = Funct();
      break;
    case PRINT:
    case PRINTLN:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINT:
        n = jj_consume_token(PRINT);
        break;
      case PRINTLN:
        n = jj_consume_token(PRINTLN);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t = Fact();
                                         t = new ASTPrint(t, n.image.equals("println"));
      break;
    case FST:
    case SND:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FST:
        n = jj_consume_token(FST);
        break;
      case SND:
        n = jj_consume_token(SND);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                                  t = new ASTProj(t, n.image.equals("fst"));
      break;
    case MATCH:
      jj_consume_token(MATCH);
      t2 = Let();
      t = Match(t2);
      break;
    case LABEL:
      n = jj_consume_token(LABEL);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                             t = new ASTUnion(n.image, t, false);
      break;
    case LLABEL:
      n = jj_consume_token(LLABEL);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                              t = new ASTUnion(n.image, t, true);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = TermList(false);
      jj_consume_token(RPAR);
      break;
    case LBRA:
      jj_consume_token(LBRA);
      t = Let();
      jj_consume_token(COMMA);
      t2 = TermList(true);
      jj_consume_token(RBRA);
                                                            t = new ASTPair(t, t2, true);
      break;
    case REFL:
      jj_consume_token(REFL);
      if (jj_2_2(2)) {
        jj_consume_token(LPAR);
        t = Fact();
        jj_consume_token(EQUAL);
        t2 = Fact();
        jj_consume_token(RPAR);
      } else {
        ;
      }
                                                                            t = new ASTRefl(t, t2);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Funct() throws ParseException {
  Token n;
  ASTNode t, t2;
  ASTFunc tf, tc, tn;
  ASTType type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FN:
      jj_consume_token(FN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                        tf = new ASTFunc(n.image, null, type, false); tc = tf;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                    tn = new ASTFunc(n.image, null, type, false); tc.setBody(tn); tc = tn;
      }
      jj_consume_token(ARROW);
      jj_consume_token(LCUR);
      t2 = Let();
      jj_consume_token(RCUR);
                                               tc.setBody(t2); t = tf;
      break;
    case LFN:
      jj_consume_token(LFN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                         tf = new ASTFunc(n.image, null, type, true); tc = tf;
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                    tn = new ASTFunc(n.image, null, type, true); tc.setBody(tn); tc = tn;
      }
      jj_consume_token(DLOLLIPOP);
      jj_consume_token(LCUR);
      t2 = Let();
      jj_consume_token(RCUR);
                                                   tc.setBody(t2); t = tf;
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }
